# package-query

./: .gitignore  AUTHORS  Makefile  Makefile.am  README  alpm-query.c  alpm-query.h  aur-query.c  aur.c  aur.h  autoclean.sh  autogen.sh  configure.ac  meson.build  meson_options.txt  package-query.c  util.c  util.h
doc/: Makefile  Makefile.am  package-query.8
src/: Makefile  Makefile.am  alpm-query.c  alpm-query.h  aur.c  aur.h  color.c  color.h  package-query.c  util.c  util.h
